# rpipico_exp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  a.out  read_port.c  readme.md
blink/: CMakeLists.txt  blink.c  temp.c
qt_app/: main.cpp
temperature_exp/: dht.h
uart_exp/: CMakeLists.txt  uart_exp.c
